--- a/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
@@ -19,9 +19,9 @@
         </TemplateColumn>
         <PropertyColumn Property="e => e.Number" Title="Nr." CellStyleFunc="@ViewHelper.DriverTeamStyleFunc" HeaderClass="number-col" CellClass="number-col" Sortable="false" />
         <PropertyColumn Property="e => e.Skill" />
-        <PropertyColumn Property="e => e.Reliability" />
-        <PropertyColumn Property="e => e.TeamRole" />
-        <TemplateColumn>
+        <PropertyColumn Property="e => e.Reliability" Title="Rel." />
+        <PropertyColumn Property="e => e.TeamRole" Title="Role" />
+        <TemplateColumn Title="Team">
             <CellTemplate>
                 @if (context.Item.SeasonTeam == null)
                 {
