--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -31,14 +31,20 @@ html, body {
     font-size: 0.9em;
 }
 
-.accent-cell {
-    width: 7px !important;
-}
-
 .number-col {
     width: 30px;
-    padding: 10px;
-    text-align: center;
+    padding: 10px !important;
+    text-align: center !important;
+}
+
+.number-col-lg {
+    width: 50px;
+    padding: 10px !important;
+    text-align: center !important;
+}
+
+.field-xs {
+    width: 50px;
 }
 
 .field-sm {
