--- a/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
@@ -5,7 +5,7 @@
 
 <MudDataGrid T="SeasonTeam" Items="@SeasonTeamEntrants" Class="my-2">
     <ToolBarContent>
-        <MudText Typo="Typo.h4">Teams in season</MudText>
+        <MudText Typo="Typo.h4">Teams</MudText>
         <MudSpacer />
         <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="EnterTeam">New</MudButton>
     </ToolBarContent>
@@ -15,7 +15,7 @@
             <CellTemplate>
                 @if (context.Item.Team is not null)
                 {
-                    <CountryFlag Code="@context.Item.Team.Country" Size="FlagSize.Normal" IncludeName="true" />
+                    <CountryFlag Code="@context.Item.Team.Country" Size="FlagSize.Small" IncludeName="true" />
                 }
                 else
                 {
