--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -106,7 +106,7 @@
             <MudTabPanel Text="Settings" BadgeData='"!"' BadgeColor="Color.Error">
                 <MudGrid>
                     <MudItem xs="12">
-                        <MudPaper Elevation="15">
+                        <MudPaper Elevation="15" Class="pa-4">
                             <MudStack Row="true">
                                 <MudText Typo="Typo.h3">Settings</MudText>
                                 <MudSpacer />
@@ -115,8 +115,8 @@
                         </MudPaper>
                     </MudItem>
                     <MudItem xs="4">
-                        <MudText Typo="Typo.subtitle1">Subtitle</MudText>
-                        <MudPaper Elevation="15" Class="pa-4">
+                        <MudPaper Elevation="15" Class="pa-4 mud-height-full">
+                            <MudText Typo="Typo.subtitle1">Settings 1</MudText>
                             <MudTextField @bind-Value="Season.Year" Label="Year" ReadOnly="true"></MudTextField>
                             <MudTextField @bind-Value="Season.MaximumDriversInRace" Label="MaximumDriversInRace" ReadOnly="true"></MudTextField>
                             <MudTextField @bind-Value="Season.QualifyingAmountQ2" Label="QualifyingAmountQ2" ReadOnly="true"></MudTextField>
@@ -126,8 +126,8 @@
                         </MudPaper>
                     </MudItem>
                     <MudItem xs="4">
-                        <MudText Typo="Typo.subtitle1">Subtitle</MudText>
-                        <MudPaper Elevation="15" Class="pa-4">
+                        <MudPaper Elevation="15" Class="pa-4 mud-height-full">
+                            <MudText Typo="Typo.subtitle1">Settings 2</MudText>
                             <MudTextField @bind-Value="Season.GridBonus" Label="GridBonus" ReadOnly="true"></MudTextField>
                             <MudTextField @bind-Value="Season.RngMinimum" Label="RngMinimum" ReadOnly="true"></MudTextField>
                             <MudTextField @bind-Value="Season.RngMaximum" Label="RngMaximum" ReadOnly="true"></MudTextField>
@@ -138,7 +138,7 @@
                         </MudPaper>
                     </MudItem>
                     <MudItem xs="4">
-                        <MudPaper Elevation="15" Class="pa-4">
+                        <MudPaper Elevation="15" Class="pa-4 mud-height-full">
                             <MudText Typo="Typo.subtitle1">Points per position</MudText>
                             @if (Season.PointAllotments != null)
                             {
