--- a/SimTECH/SimTECH/Pages/Season/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEngines.razor
@@ -6,7 +6,7 @@
     <ToolBarContent>
         <MudText Typo="Typo.h4">Engines</MudText>
         <MudSpacer />
-        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="EnterEngine">New</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterEngine">New</MudButton>
     </ToolBarContent>
     <Columns>
         <PropertyColumn Property="e => e.Name" />
