--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -9,7 +9,7 @@
         <ToolBarContent>
             <MudText Typo="Typo.h4">Engines</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddEngine">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddEngine">New</MudButton>
         </ToolBarContent>
         <HeaderContent>
             <MudTh>Name</MudTh>
